@@ -6,7 +6,9 @@ NEW FEATURES
 (raf) TextUI3D: Added wait for VBlank before page flipping, this eliminates tearing; but reduces framerate because the render thread also waits for vblank; need to optimize.
 (raf) TextUI3D: Added support for on-screen visualizer (only gu visualizers supported) (fullscreen visualizer not supported yet).
 (raf) Core: Using Alexander Berl (a.k.a. Raphael) routines for VRAM allocation.
+(raf) VIS: Added a cube visualizer, displays a scope on every side.
 BUG FIXES
+(raf) Core: Fixed an old bug where if a song had no metadata (like an old MP3 without ID3 info), the metadata would be populated from the currently highlighted song.
 KNOWN BUGS
 (raf) TextUI: When switching skins all the text will disappear. This happens on occasion. Just move up or down for the text to re-render.
 OE related Problems on this release
